--- a/src/app/features/onboarding/onboarding.component.html
+++ b/src/app/features/onboarding/onboarding.component.html
@@ -39,6 +39,5 @@
         </div>
 
     </div>
-     <!-- <router-outlet *ngIf="!showOnboarding()"></router-outlet> -->
 
-</background>
+</background>     <router-outlet></router-outlet>
