--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,42 @@
-<p>header works!</p>
+<div class="bg-white p-4 shadow-md flex justify-between items-center">
+    <div>
+        <input type="text" placeholder="Search by Tracking Number" class="border p-2 pr-40 rounded">
+    </div>
+    <div>
+        <button class="bg-green-700 flex items-center gap-1 text-white px-4 py-2 rounded-xl"> <svg
+                xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 48 48">
+                <circle cx="24" cy="24" r="21" fill="white" />
+                <g fill="green">
+                    <path d="M21 14h6v20h-6z" />
+                    <path d="M14 21h20v6H14z" />
+                </g>
+            </svg>Create Shipment</button>
+    </div>
+    <div class="flex items-center">
+        <div class="relative"><svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24">
+                <path fill="black" fill-rule="evenodd"
+                    d="M12 1a2 2 0 0 0-1.98 2.284A7.003 7.003 0 0 0 5 10v8H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2h-1v-8a7.003 7.003 0 0 0-5.02-6.716A2 2 0 0 0 12 1m2 21a1 1 0 0 1-1 1h-2a1 1 0 1 1 0-2h2a1 1 0 0 1 1 1"
+                    clip-rule="evenodd" />
+            </svg>
+            <div
+                class="bg-red-400 flex mx-auto justify-center items-center absolute rounded-full w-[12px] h-[12px] -top-1 text-white right-0">
+                <p class="text-xs">4</p>
+            </div>
+        </div>
+        <div class="mr-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 32 32">
+                <path fill="none"
+                    d="M8.007 24.93A4.996 4.996 0 0 1 13 20h6a4.996 4.996 0 0 1 4.993 4.93a11.94 11.94 0 0 1-15.986 0M20.5 12.5A4.5 4.5 0 1 1 16 8a4.5 4.5 0 0 1 4.5 4.5" />
+                <path fill="black"
+                    d="M26.749 24.93A13.99 13.99 0 1 0 2 16a13.9 13.9 0 0 0 3.251 8.93l-.02.017c.07.084.15.156.222.239c.09.103.187.2.28.3q.418.457.87.87q.14.124.28.242q.48.415.99.782c.044.03.084.069.128.1v-.012a13.9 13.9 0 0 0 16 0v.012c.044-.031.083-.07.128-.1q.51-.368.99-.782q.14-.119.28-.242q.451-.413.87-.87c.093-.1.189-.197.28-.3c.071-.083.152-.155.222-.24ZM16 8a4.5 4.5 0 1 1-4.5 4.5A4.5 4.5 0 0 1 16 8M8.007 24.93A4.996 4.996 0 0 1 13 20h6a4.996 4.996 0 0 1 4.993 4.93a11.94 11.94 0 0 1-15.986 0" />
+            </svg>
+        </div>
+        <div class="mr-4">Ikechukwu Kalu</div>
+        <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 48 48">
+                <path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"
+                    d="M36 18L24 30L12 18" />
+            </svg>
+        </div>
+    </div>
+</div>
