--- a/src/app/features/main-content/main-content.component.html
+++ b/src/app/features/main-content/main-content.component.html
@@ -1,4 +1,4 @@
-<div class="p-5 mt-20">
+<dashboard-template><div class="p-5 mt-20">
     <div class="flex justify-between">
         <div>
             <h1 class="text-2xl font-bold mb-4">Hi, Ikechukwu</h1>
@@ -112,4 +112,4 @@
             <div class="text-3xl py-8 font-bold">1</div>
         </div>
     </div>
-</div>
+</div></dashboard-template>
