--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -27,21 +27,21 @@
     <nav class="py-4">
         <ul>
             <li *ngFor="let item of navItems; let i = index" class="">
-                <div
+                <div (click)="toggleNavItem(item)"
                     class="flex gap-2 hover:bg-green-300 hover:border-solid hover:border-r-4 hover:border-green-600 items-center cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" [attr.viewBox]="'0 0 24 24'">
                         <path [attr.d]="item.icon" fill="green"></path>
                     </svg>
-                    <a  (click)="selectFirstSubNav(item)" class="block py-2 px-4 text-black rounded">{{ item.label }}</a>
+                    <a class="block py-2 px-4 text-black rounded">{{ item.label }}</a>
                 </div>
                 <ul *ngIf="item.isOpen" class="pl-8">
                     <li *ngFor="let subItem of item.subNav"
                         class="hover:bg-green-300 hover:border-solid hover:border-r-4 hover:border-green-600 items-center">
-                        <a [routerLink]="subItem.link" class="block py-2 px-4 text-black rounded">{{ subItem.label }}</a>
+                        <a (click)="navigateRoute(subItem.link)" class="block py-2 px-4 text-black rounded">{{
+                            subItem.label }}</a>
                     </li>
                 </ul>
             </li>
         </ul>
-
     </nav>
 </div>
