--- a/src/app/features/create-shipment/create-shipment.component.html
+++ b/src/app/features/create-shipment/create-shipment.component.html
@@ -174,12 +174,29 @@
         <!-- Modal -->
         <div *ngIf="isModalOpen" class="fixed inset-0 bg-gray-600 bg-opacity-50 flex justify-end items-center">
             <div class="bg-white h-full p-6 rounded-lg shadow-lg">
-                <h2 class="text-xl font-semibold mb-4">Review and Submit</h2>
-                <p class="mb-4">Please review all the information before submitting the form.</p>
-                <button type="button" class="bg-green-500 text-white rounded-lg px-4 py-2"
-                    (click)="submitForm()">Finish</button>
-                <button type="button" class="bg-gray-200 text-gray-700 rounded-lg px-4 py-2 ml-2"
-                    (click)="closeModal()">Close</button>
+                <div (click)="closeModal()" class="flex items-center gap-2"><svg xmlns="http://www.w3.org/2000/svg"
+                        width="20px" height="20px" viewBox="0 0 24 24">
+                        <path fill="black"
+                            d="m6.4 18.308l-.708-.708l5.6-5.6l-5.6-5.6l.708-.708l5.6 5.6l5.6-5.6l.708.708l-5.6 5.6l5.6 5.6l-.708.708l-5.6-5.6z" />
+                    </svg>
+                    <p class="text-xl font-bold">Notifications {{notifications.length}}</p>
+                </div>
+
+                <ul class="divide-y divide-gray-200">
+                    <li *ngFor="let notification of notifications" class="px-4 py-4 sm:px-6 flex">
+                        <div class="flex-shrink-0">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24">
+                                <path fill="green"
+                                    d="M3 4h14v4h3l3 4v5h-2a3 3 0 0 1-3 3a3 3 0 0 1-3-3H9a3 3 0 0 1-3 3a3 3 0 0 1-3-3H1V6a2 2 0 0 1 2-2m14 5.5V12h4.47L19.5 9.5zm-11 6A1.5 1.5 0 0 0 4.5 17A1.5 1.5 0 0 0 6 18.5A1.5 1.5 0 0 0 7.5 17A1.5 1.5 0 0 0 6 15.5m12 0a1.5 1.5 0 0 0-1.5 1.5a1.5 1.5 0 0 0 1.5 1.5a1.5 1.5 0 0 0 1.5-1.5a1.5 1.5 0 0 0-1.5-1.5M8 14l6-6l-1.41-1.42L8 11.17L5.91 9.08L4.5 10.5z" />
+                            </svg>
+                        </div>
+                        <div class="ml-4">
+                            <p class="text-sm font-medium text-gray-900">{{notification.message}}</p>
+                            <p class="text-sm text-gray-500">{{notification.time}}</p>
+                            <button class="text-sm text-blue-500">VIEW MORE</button>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
